# do-prace-na-kole

./: .bowerrc  .coveragerc  .coveralls.yml  .dockerignore  .gitignore  Dockerfile  DockerfileDev  Makefile  Pipfile  README.md  README_QGIS.md  TestDockerfile  admin.py  aws-startup.sh  bower.json  celery-container  circle.yml  deploy-from-test-to-prod  dev-entrypoint.sh  develop.sh  docker-celery-entrypoint.sh  docker-celerybeat-entrypoint.sh  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-test-entrypoint.sh  docker.env.sample  dpnk-container  fabfile.py  index.html  make_graph.sh  manage.py  models.py  newrelic.ini  package-lock.json  package.json  postgres-container  pyproject.toml  pytest-dev  pytest.ini  (+29 more)
.circleci/: config.yml
anonymizer/: dpnk.py
apps/: conftest.py
apps/coupons/: __init__.py  admin.py  apps.py  forms.py  urls.py  views.py
apps/donation_chooser/: __init__.py  admin.py  apps.py  forms.py  models.py  rest.py  urls.py  views.py
apps/dpnk/: __init__.py  actions.py  admin.py  admin_mixins.py  allauth.py  apps.py  auth.py  auth_backend.py  autocomplete_views.py  avatar.py  avfull.py  cache_middleware.py  calendar.py  celery.py  company_admin_forms.py  company_admin_views.py  context_processors.py  custom_authentication.py  decorators.py  draw.py  email.py  exceptions.py  fakturoid_invoice_gen.py  fakturoid_invoice_send_by_email.py  fields.py  filters.py  forms.py  invoice_gen.py  invoice_pdf.py  lookups.py  mailing.py  middleware.py  model_mixins.py  models.py  notification_types.py  parcel_batch.py  payu.py  resources.py  rest.py  rest_auth.py  (+25 more)
apps/motivation_messages/: __init__.py  admin.py  apps.py  models.py  tests.py
apps/psc/: admin.py
apps/sitetree_modeltranslation/: admin.py  models.py  translation.py
apps/stale_notifications/: admin_mixins.py  model_mixins.py
apps/stravasync/: README.md  admin.py  apps.py  commute_modes.py  hashtags.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/t_shirt_delivery/: actions.py  admin.py  admin_forms.py  admin_views.py  batch_csv.py  customer_sheets.py  delivery_batch_resources.py  filters.py  (+7 more)
backup/: local.py  sitetree.json  style1.css  style_working.css
coupons/: admin.py  forms.py  urls.py  views.py
docs/: API.md  DATA_EXPORT_FOR_CITIES.md  DIPLOMAS.md  SETTING_UP_NEW_CAMPAIGN.md
dpnk/: actions.py  admin.py  admin_mixins.py  apps.py  auth.py  autocomplete_views.py  avatar.py  avfull.py  calendar.py  company_admin_forms.py  company_admin_views.py  context_processors.py  decorators.py  draw.py  email.py  exceptions.py  fields.py  filters.py  forms.py  invoice_gen.py  invoice_pdf.py  lookups.py  mailing.py  middleware.py  models.py  resources.py  rest.py  rest_ecc.py  results.py  sample-settings.py  sitetrees.py  social_pipeline.py  statement.py  tasks.py  transaction_forms.py  translation.py  urls.py  util.py  vacations.py  views.py  (+6 more)
hooks/: pre-commit
migrations/: 0002_auto__add_company__add_city__add_result__add_competition__add_subsidia.py  0003_separate_city_company_subsidiary_from_user_team.py  0005_auto__del_result__add_choicetype__del_field_question_questionaire__add.py  0007_auto__del_field_question_competition__del_field_question_questionaire_.py  0008_auto__add_unique_company_name__add_unique_city_name__add_unique_compet.py
monorepo/docker-base-image/: Dockerfile  README.md  pyproject.toml
monorepo/docker-base-image/.circleci/: config.yml
motivation_messages/: admin.py  models.py  tests.py
price_level/: apps.py
price_level_migrations/: 0001_initial.py  0002_auto_20190802_1935.py  0002_auto_20250325_0531.py  0003_auto_20251030_0908.py
project/: celery.py  db_router.py  non_html_debug.py  settings.py  settings_dev.py  settings_local_sample.py  settings_local_sample_docker.py  test_celery_liveness.py  test_settings.py  urls.py
psc/: admin.py
scripts/: .gitignore  AWS_README.org  aws_dpnk.py  copy_image_from_test_to_prod  deploy-from-test-to-prod  deploy_from_test_to_prod  deploy_frontend  deregister-prod  deregister-test  download_dispatched_subsidiary_boxes.sh  dpnk_login.sh  dump_table  export-company-shapefile.sh  export-company-shapefile.sql  generate_delivery_batch_pdf.sh  generate_gis_export  performance_testing.sh  pyshell  refresh_views.sql  register-prod  regsiter-test  restart_containers_on_server  restart_dpnk  status.py  sync-hosts.py  test_changes  versions.sh  wget_delivery_batches.sh
setup/: reqiurements
stale_notifications/: admin_mixins.py  model_mixins.py
stravasync/: admin.py  apps.py  commute_modes.py  hashtags.py  models.py  tasks.py  tests.py  urls.py  views.py
t_shirt_delivery/: actions.py  admin.py  admin_forms.py  admin_mixins.py  admin_views.py  batch_csv.py  customer_sheets.py  forms.py  tasks.py  urls.py  views.py
templates/: 500.html  base.html
testing/: accept_user.html  change_profile.html  change_team_coordinator.html  check_accepted_second_user.html  check_change_team_coordinator.html  check_create_own_team.html  check_profile.html  check_profile_change.html  check_profile_second_user.html  create_own_team.html  create_team  create_team.html  delete_testing_data.html  delete_testing_team.html  invitation.html  payment_type.html  payment_type_second_user.html  register_second_user.html  registration.html  set_distance_t_shirt  set_environment.html  set_team  vyplneni_osobnich_udaju  vyplneni_registrace.html
thumbnail_migrations/: 0001_initial.py
(+1278 files in other folders)
