[tool.poetry]
name = "do-prace-na-kole"
version = "0.1.0"
description = ""
authors = ["AutoMat"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
six = "*"
Django = ">=2.2.6"
django-import-export = "*"
django-import-export-celery = {git = "https://github.com/auto-mat/django-import-export-celery.git", rev = "master"}
django-autocomplete-light = {git = "https://github.com/auto-mat/django-autocomplete-light.git", rev = "jquery"}
django-smart-selects = {git = "https://github.com/Murakam1/django-smart-selects.git", rev = "patch-1"}
psycopg2 = "*"
python-memcached = "*"
django-chart-tools = "*"
django-extensions = "*"
django-softhyphen = "*"
django-composite-field = "*"
django-registration-redux = "*"
django-nested-admin = "*"
django-su = "*"
createsend = "*"
ordereddict = "*"
django-author = "*"
django-fieldsignals = "*"
django-admin-sortable2 = "*"
reportlab = "*"
django-dbbackup = "*"
polyline = "*"
InvoiceGenerator = {git = "https://github.com/auto-mat/InvoiceGenerator.git", rev = "master"}
django-related-admin = "*"
newrelic = "*"
django-crispy-forms = "1.11.2"
django-class-based-auth-views = "*"
slumber = "*"
geopy = "==1.22.0"
gunicorn = "*"
djcacheutils = "*"
django-settings-context-processor = "*"
django-rosetta = "*"
django-oauth-toolkit = "*"
djangorestframework = "*"
django-leaflet = "*"
gpxpy = "*"
lxml = "*"
django-gpxpy = "*"
django-cachalot = {git = "https://github.com/federicobond/django-cachalot.git", rev = "django-2.2"}
django-bulk-update = "*"
django-cors-headers = "*"
django-denorm = {git = "https://github.com/auto-mat/django-denorm.git", rev = "develop"}
django-extra-views = "*"
raven = "*"
celery = "<=4.4.5"
flower = "*"
django-daterange-filter = "*"
django-smmapdfs = "*"
django-storages = "*"
django-model-utils = "*"
django-price-level = "*"
django-datatables-view = "*"
django-rank-query = "*"
django-adminactions = "1.12.0"
django-avatar = {git = "https://github.com/tmszi/django-avatar.git", rev = "check-if-img-is-not-corrupter"}
django-photologue = "3.15.1"
boto3 = "*"
django-google-tag-manager = "*"
django-ses = "*"
django-sesame = "*"
ua-parser = "*"
whitenoise = "*"
django-favicon = "*"
django-mass-edit = "*"
fiobank = "*"
django-ipware = "<=2.1.0"
djangorestframework-gis = "*"
django-table-select-widget = {git = "https://github.com/willardmr/DjangoTableSelectMultipleWidget.git", rev = "master"}
redis = "*"
django-isnull-list-filter = "*"
django-redis = "*"
coreapi = "*"
django-celery-email = "*"
django-sitetree = "*"
django-admin-views = "*"
single-beat = "*"
vokativ = "*"
django-fm = {git = "https://github.com/auto-mat/django-fm.git", rev = "fix-jquery-ajax-deprecated-methods"}
django-initial-field = "*"
django-betterforms = "*"
django-adminfilters = "==1.0.0"
django-bleach = "*"
sqlparse = "*"
django-appconf = "*"
social-auth-app-django = "*"
svg2rlg = {git = "https://github.com/aquavitae/svg2rlg.git"}
django-subdomains = {git = "https://github.com/PetrDlouhy/django-subdomains", rev = "django20"}
django-advanced-filters = "*"
stravalib = {git = "https://github.com/hozn/stravalib", rev = "master"}
django-wysiwyg-redactor = {git = "https://github.com/adilkhash/django-wysiwyg-redactor"}
django-selectable = "*"
django-likes = {git = "https://github.com/PetrDlouhy/django-likes.git", rev = "develop"}
django-braces = "*"
django-modeltranslation = "==0.17.7"
django_polymorphic = "*"
Unidecode = "*"
Pillow = "==9.3.0"
easy-thumbnails = "*"
SQLAlchemy = "*"
django_celery_beat = "*"
django-stdnumfield = {git = "https://github.com/PetrDlouhy/django-stdnumfield.git", rev = "mergeup"}
PyPDF2 = "*"
django-bootstrap4 = "==0.0.8"
html2text = "*"
tornado = "<6"
dj_anonymizer = "*"
faker = "*"
django-colorfield = "*"
dj-fiobank-payments = "<=0.3.0"
asgiref = "*"
django-dbtemplates = "*"
django-reversion = "*"
django-admin-charts = "<1.2.0" # https://github.com/PetrDlouhy/django-admin-charts/commit/758b5809483872eb81e83491ae0617019c87fd42#r87232967
django-inline-static = "*"
django-notifications-hq = {git = "https://github.com/auto-mat/django-notifications.git", rev = "list_all"}
django-extra-fields = "*"
django-debug-toolbar = "*"
django-debug-toolbar-template-timings = "*"
django-debug-toolbar-request-history = "*"
django-silk = "*"
pre-commit = "*"
django-report-builder = "*"
dj-rest-auth = "*"
memoize = "^1.0.0"
fakturoid = "^1.5.1"
pytest-cov = "^3.0.0"
coveragepy-lcov = "^0.1.2"
osmnx = "^1.2.1"

[tool.poetry.dev-dependencies]
coverage = "*"
freezegun = "*"
django-admin-smoke-tests = "*"
django-debug-toolbar-line-profiler = "*"
django-nose = "*"
nose-parameterized = "*"
nose-timer = "*"
nose-exclude = "*"
flake8 = "*"
flake8-blind-except = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-tidy-imports = "*"
flake8-builtins = "*"
pudb = "*"
coveralls = "*"
ddt = "*"
model_mommy = {git = "https://github.com/auto-mat/model_mommy.git", rev = "issue-377"}
django_coverage_plugin = "*"
flake8_strict = "*"
django-livereload-server = "*"
django-debug-toolbar-template-profiler = "*"
black = "^22.1.0"
pytest = "^6.2.2"
pytest-benchmark = "^3.2.3"
pytest-django = "^4.1.0"
django-webtest = "^1.9.7"
django-dynamic-fixture = "^3.1.1"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
